<resources>
    <string name="app_name">MyDiary</string>

    <string name="diary">日记</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>
    <string name="notify">提示</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="word">字</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>

    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="diary_total_count">总共 %d 篇</string>

    <string name="in_save">保存中</string>
    <string name="notify_failed_to_get_permission">权限获取失败</string>
    <string name="notify_permission_be_refused">权限获取被拒绝，请重新授权</string>
    <string name="notify_permission_be_refused_and_never_ask_again">权限获取被拒绝，请在设置界面中开启</string>
    <string name="notify_diary_has_not_save_sure_to_quit">编辑的内容还没有保存，确认退出？</string>
    <string name="notify_empty_diary_cannot_save">内容为空，无法保存，是否退出？</string>

    <string name="setting_security">安全设置</string>
    <string name="setting_app_lock">密码保护</string>
    <string name="setting_fingerprint">指纹解锁</string>
    <string name="setting_modify_password">修改密码</string>
    <string name="setting_auto_lock_interval">自动锁定时间</string>
    <string name="backup_when_modified">即时保存</string>
    <string name="minute">分钟</string>
    <string name="lock_when_exit">退出即锁定</string>

    <string name="setting_backup_and_restore">备份还原</string>
    <string name="setting_backup">备份数据</string>
    <string name="setting_restore">还原数据</string>
    <string name="setting_auto_backup">自动备份</string>
    <string name="setting_auto_backup_interval">自动备份时间</string>
    <string name="day">天</string>
    <string name="setting_backup_file_encryption">备份文件加密</string>
    <string name="notify_set_lock_password_before_encryption">请先设置锁定密码</string>

    <string name="setting_layout_style">样式布局</string>
    <string name="setting_paragraph_head_indent">段首缩进</string>
    <string name="setting_font_size">段首缩进</string>
    <string name="setting_diary_tag">日记TAG</string>
    <string name="setting_font">字体设置</string>
    <string name="font_setting_sample_title">预览字体效果</string>
    <string name="font_setting_sample">\n调节只在日记详情页生效\n可以对字体大小和字体间距进行设置</string>
    <string name="setting_image_count">图片最大数量</string>
    <string name="setting_image_save_quality">图片保存质量</string>

    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_usage_statistics">使用统计</string>

    <string name="on">开</string>
    <string name="off">关</string>
    <string name="follow_system">跟随系统</string>

    <string name="low">低</string>
    <string name="medium">中等</string>
    <string name="original">原图</string>

    <string name="please_input_password_to_confirm">请输入密码进行验证</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_again">请再次输入新密码进行确认</string>
    <string name="not_same_input_so_please_input_new_password_again">两次输入不一致，请重新输入新密码</string>

    <string name="hint_input_password">请输入密码</string>
    <string name="hint_verify_fingerprint_or_input_password">请验证指纹或输入密码</string>
    <string name="fingerprint_authentication_dialog_title">指纹验证</string>
    <string name="fingerprint_authentication_dialog_description"> </string>

    <string name="in_finding_backup_file">查找备份文件中</string>
    <string name="select_backup_file">选择备份文件</string>
    <string name="import_backup_file">导入备份文件</string>
    <string name="delete_backup_file">删除备份文件</string>
    <string name="rename_backup_file">重命名备份文件</string>
    <string name="share_backup_file">发送备份文件</string>
    <string name="notify_backup_data">确认备份数据到文件？</string>
    <string name="hint_rename_backup_file">请输入新的文件名</string>
    <string name="in_doing">%s中</string>
    <string name="backup_data">备份数据</string>
    <string name="restore_data">还原数据</string>
    <string name="auto_backup_data">自动备份</string>
    <string name="clear_backup_data">备份文件清理</string>
    <string name="notify_clear_backup_data">备份文件清理将只保留最新的备份文件，其余的会被删除，是否继续？</string>
    <string name="notify_restore_data_failed_wrong_password">文件还原失败，请输入备份文件时的加密密码</string>

    <string name="diary_count">已记录</string>
    <string name="word_count">总字数</string>
    <string name="image_count">图片</string>

    <string name="image_gallery">图片</string>

    <string name="new_add">新建</string>

    <string name="ignore">忽略</string>
</resources>